--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -13,9 +13,7 @@
         android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:subtitle="@string/main_activity_subtitle"
-        app:title="@string/app_name" />
+        app:layout_constraintTop_toTopOf="parent"/>
 
     <fragment
         android:id="@+id/main_activity_nav_host"
@@ -29,9 +27,4 @@
         app:layout_constraintTop_toBottomOf="@+id/toolbar"
         app:navGraph="@navigation/nav_graph" />
 
-
 </androidx.constraintlayout.widget.ConstraintLayout>
-
-
-
-
