--- a/app/src/main/res/layout/adapter_repo_list_item.xml
+++ b/app/src/main/res/layout/adapter_repo_list_item.xml
@@ -19,6 +19,9 @@
         android:layout_marginStart="16dp"
         android:layout_marginTop="16dp"
         android:layout_marginEnd="16dp"
+        android:background="?android:attr/selectableItemBackground"
+        android:clickable="true"
+        android:focusable="true"
         android:onClick="@{listener::onClick}">
 
         <de.hdodenhof.circleimageview.CircleImageView
