--- a/app/src/main/res/layout/fragment_repo_detail.xml
+++ b/app/src/main/res/layout/fragment_repo_detail.xml
@@ -57,7 +57,7 @@
                 tools:src="@sample/repos.json/repos/avatar" />
 
             <TextView
-                android:id="@+id/tvAutor"
+                android:id="@+id/tvAuthor"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_margin="24dp"
@@ -82,9 +82,9 @@
                 android:text="@{item.name}"
                 android:textAppearance="@style/TextAppearance.AppCompat.Body2"
                 android:textColor="@android:color/white"
-                app:layout_constraintEnd_toEndOf="@+id/tvAutor"
-                app:layout_constraintStart_toStartOf="@+id/tvAutor"
-                app:layout_constraintTop_toBottomOf="@+id/tvAutor"
+                app:layout_constraintEnd_toEndOf="@+id/tvAuthor"
+                app:layout_constraintStart_toStartOf="@+id/tvAuthor"
+                app:layout_constraintTop_toBottomOf="@+id/tvAuthor"
                 tools:text="@sample/repos.json/repos/repo_name" />
 
             <androidx.cardview.widget.CardView
@@ -110,21 +110,21 @@
 
                     <TextView
                         android:textStyle="bold"
-                        android:id="@+id/tvStars"
+                        android:id="@+id/tvStarsCount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
                         android:text="@{Integer.toString(item.stargazers_count)}"
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         app:layout_constraintBottom_toBottomOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/tvForks"
+                        app:layout_constraintEnd_toStartOf="@+id/tvForksCount"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toBottomOf="@+id/ivStar"
                         tools:text="@sample/repos.json/repos/stars" />
 
                     <TextView
                         android:textStyle="bold"
-                        android:id="@+id/tvForks"
+                        android:id="@+id/tvForksCount"
                         android:layout_width="0dp"
                         android:layout_height="wrap_content"
                         android:gravity="center_horizontal"
@@ -132,7 +132,7 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toStartOf="@+id/tvIssue"
-                        app:layout_constraintStart_toEndOf="@+id/tvStars"
+                        app:layout_constraintStart_toEndOf="@+id/tvStarsCount"
                         app:layout_constraintTop_toBottomOf="@+id/ivFork"
                         tools:text="@sample/repos.json/repos/forks" />
 
@@ -142,7 +142,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/cd_imageStars"
                         android:src="@drawable/star_outline"
-                        app:layout_constraintBottom_toTopOf="@+id/tvStars"
+                        app:layout_constraintBottom_toTopOf="@+id/tvStarsCount"
                         app:layout_constraintEnd_toStartOf="@+id/ivFork"
                         app:layout_constraintStart_toStartOf="parent"
                         app:layout_constraintTop_toTopOf="parent" />
@@ -168,7 +168,7 @@
                         android:textAppearance="@style/TextAppearance.AppCompat.Body1"
                         app:layout_constraintBottom_toBottomOf="parent"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toEndOf="@+id/tvForks"
+                        app:layout_constraintStart_toEndOf="@+id/tvForksCount"
                         app:layout_constraintTop_toBottomOf="@+id/ivIssue"
                         tools:text="@sample/repos.json/repos/issues" />
 
@@ -178,7 +178,7 @@
                         android:layout_height="wrap_content"
                         android:contentDescription="@string/cd_forks"
                         android:src="@drawable/source_fork"
-                        app:layout_constraintBottom_toTopOf="@+id/tvForks"
+                        app:layout_constraintBottom_toTopOf="@+id/tvForksCount"
                         app:layout_constraintEnd_toStartOf="@+id/ivIssue"
                         app:layout_constraintStart_toEndOf="@+id/ivStar"
                         app:layout_constraintTop_toTopOf="parent" />
