--- a/app/src/main/res/layout/inlcude_no_repo_to_display.xml
+++ b/app/src/main/res/layout/inlcude_no_repo_to_display.xml
@@ -4,7 +4,7 @@
     <data>
 
         <variable
-            name="fetchRepo"
+            name="tryFetchRepoClickListener"
             type="android.view.View.OnClickListener" />
     </data>
 
@@ -32,7 +32,7 @@
             android:id="@+id/btOpenWeb"
             style="@style/bt_white"
             android:layout_marginTop="48dp"
-            android:onClick="@{fetchRepo}"
+            android:onClick="@{tryFetchRepoClickListener}"
             android:paddingStart="24dp"
             android:paddingEnd="24dp"
             android:text="@string/btFetchRepoTryAgain"
